Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,10 +1,8 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "5919995169:AAFazEe7DFHuiq84owXKSGhowY5REIdmmdU"                              # Require restart after changing it while bot running
+OWNER_ID = "1504797855"                               # Require restart after changing it while bot running
+TELEGRAM_API = "13384432"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "ea9db4503ed7088b788e06dfd818e00e"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
