--- a/config.env
+++ b/config.env
@@ -9,7 +9,7 @@ USER_SESSION_STRING = "BQDMOvAAWVwYauPPgtL5GTRWUYySqjKZqzAYzLkVGbPzUypwPqpqopQs_
 DATABASE_URL = "mongodb+srv://SK:SK@txmlbot.y86hgmz.mongodb.net/?retryWrites=true&w=majority"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
-AUTHORIZED_CHATS = "1001432933469"                       # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "-1001432933469"                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
 STATUS_LIMIT = "6"
 DEFAULT_UPLOAD = "gd"
@@ -20,7 +20,7 @@ EXTENSION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = "False"
 YT_DLP_OPTIONS = ""
 USE_SERVICE_ACCOUNTS = "False"
-SET_COMMANDS = "False"
+SET_COMMANDS = "true"
 FSUB_IDS = ""
 BOT_PM = "True"
 BOT_MAX_TASKS = ""
@@ -47,7 +47,7 @@ UPSTREAM_BRANCH = "beta"
 
 # Leech & Mirror
 LEECH_SPLIT_SIZE = ""
-AS_DOCUMENT = "False"
+AS_DOCUMENT = "true"
 EQUAL_SPLITS = "False"
 MEDIA_GROUP = "False"
 CAP_FONT = "code"
@@ -60,8 +60,8 @@ MIRROR_FILENAME_SUFFIX = ""
 MIRROR_FILENAME_REMNAME = ""
 
 # Log Channel (Single ID)
-LEECH_LOG_ID = ""
-MIRROR_LOG_ID = ""
+LEECH_LOG_ID = "-1001621882123"
+MIRROR_LOG_ID = "-1001621882123"
 LINKS_LOG_ID = ""
 
 # qBittorrent/Aria2c
